login added to the project
