# internal/models/user.go
@@ -1,0 +1,11 @@
+package models
+
+import "gorm.io/gorm"
+
+// User represents a user in the system
+// It includes fields for ID, Username, Password, and CreatedAt
+type User struct {
+	gorm.Model
+	Username string `gorm:"uniqueIndex"`
+	Password string
+}
